--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
         <p>We bring 30 years of expertise and experience gained across a range of industries and sectors.<br> When you work with us, you get access to all our skills and resources to fast-track your business improvement and growth.</p>
       </header>
   </article><article>
-    <a href="/services/inbox-wizard" class="link">
+    <a href="/services/synchub-data-integration-solutions" class="link">
       <span class="image">
-        <img src="" alt="Inbox Wizard" />
+        <img src="" alt="SyncHub Data Integration for Franchisors" />
       </span>
     </a>
       <header class="major">
-        <h2>Inbox Wizard</h2>
-        <p>Effortless, magical email management.</p>
+        <h2>SyncHub Data Integration for Franchisors</h2>
+        <p>Streamline your data management with SyncHub integration, designed for Australian franchisors and multi-location businesses.</p>
       </header>
   </article></section>
 
