--- a/elements/index.html
+++ b/elements/index.html
@@ -26,6 +26,9 @@
 	<!--[if lte IE 9]><link rel="stylesheet" href="/assets/css/ie9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="/assets/css/ie8.css" /><![endif]-->
 	<link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+	<!-- Fathom - beautiful, simple website analytics -->
+		<script src="https://cdn.usefathom.com/script.js" data-site="ETBLVEDE" defer></script>
+	<!-- / Fathom -->
 </head>
 
 
