--- a/excludeme/index.html
+++ b/excludeme/index.html
@@ -33,8 +33,7 @@
 
 
 <body>
-	<script>document.body.classList.add("is-loading");</script>
-	
+
 	<!-- Wrapper -->
 <div id="wrapper">
 
@@ -59,18 +58,19 @@
 </nav>
 
 
+
+
 	<!-- Main -->
 	<div id="main" class="alt">
+
 		<!-- One -->
 		<section id="one">
-			
 			<div class="inner">
 				<header class="major">
 					<h1>Exclude Me</h1>
 				</header>
-				Excluded
-				
-				<span id="scroller"></span>
+				<span class="image main"><img src="//assets/images/pic11.jpg"
+						alt="" /></span>
 				<script>
   document.addEventListener("DOMContentLoaded", function () {
     if (typeof fathom !== 'undefined' && typeof fathom.blockTrackingForMe === 'function') {
@@ -85,7 +85,9 @@
 
 			</div>
 		</section>
+
 	</div>
+
 	<!-- Contact -->
 <section id="contact">
 	<div class="inner">
