--- a/about/index.html
+++ b/about/index.html
@@ -14,9 +14,9 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head><title>About Us | ATOM Digital</title>
+<head><title>About ATOM Digital - E-commerce Productivity Consultancy | ATOM Digital</title>
 	
-	<meta name="description" content="About ATOM Digital Business Productivity Consultancy">
+	<meta name="description" content="About ATOM Digital E-commerce Productivity Consultancy">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -47,7 +47,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -66,9 +66,9 @@
 			
 			<div class="inner">
 				<header class="major">
-					<h1>About Us</h1>
+					<h1>About ATOM Digital</h1>
 				</header>
-				About ATOM Digital - Business Productivity Consultancy
+				About ATOM Digital - E-commerce Productivity Consultancy
 				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg"
 					alt="A team of people working at a desk on laptops" /></span>
 				<span id="scroller"></span>
@@ -77,6 +77,8 @@
 <p>When you work with us, you get access to all our skills and resources to fast-track your business improvement and growth.</p>
 
 <p>We become an extension of your team. Your business becomes our business.</p>
+
+<p>Our experience spans multiple industries, but our focus is on e-commerce. We help online retailers automate fulfilment, integrate their store platforms with back-office systems and maintain accurate data flow between teams.</p>
 
 <h2 id="principle-consultant---patrick-osullivan">Principle Consultant - <nobr>Patrick O'Sullivan</nobr></h2>
 
@@ -230,7 +232,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
