--- a/elements/index.html
+++ b/elements/index.html
@@ -47,7 +47,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -589,7 +589,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
