--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head><title>ATOM Digital - Business Productivity Consultants</title>
-	<meta name="description" content="Productivity consultancy helping businesses in Geelong, Bayside, Glen Eire, Kingston, Frankston, Greater Dandenong and Mornington Peninsula.">
+<head><title>ATOM Digital - E-commerce Productivity Consultants</title>
+	<meta name="description" content="Productivity consultancy helping e-commerce businesses across Melbourne scale from $2&nbsp;million to $10&nbsp;million in annual sales.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -45,7 +45,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -62,7 +62,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>Systems and processes that save your business time and money</h1>
+                <h1>E-commerce systems that take you from $2M to $10M</h1>
             </header>
             <div class="content">
                 <p style="text-transform: uppercase;">Increase sales, reduce costs and improve productivity.<br> We can show you how.</p>
@@ -80,11 +80,11 @@
         <section id="one" class="tiles"><article>
     <a href="/what-we-do/" class="link">
       <span class="image">
-        <img src="assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg" alt="What we do" />
+        <img src="assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg" alt="What We Do for E-commerce Businesses" />
       </span>
     </a>
       <header class="major">
-        <h2>What we do</h2>
+        <h2>What We Do for E-commerce Businesses</h2>
         <p>At ATOM Digital, we help businesses like yours who need expert guidance, advice and hands-on support to solve problems, remove bottlenecks, reduce errors, improve accuracy and save time.</p>
       </header>
   </article><article>
@@ -100,21 +100,21 @@
   </article><article>
     <a href="/about/" class="link">
       <span class="image">
-        <img src="assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg" alt="About Us" />
+        <img src="assets/images/annie-spratt-QckxruozjRg-unsplash-864x259.jpg" alt="About ATOM Digital" />
       </span>
     </a>
       <header class="major">
-        <h2>About Us</h2>
-        <p>About ATOM Digital - Business Productivity Consultancy</p>
+        <h2>About ATOM Digital</h2>
+        <p>About ATOM Digital - E-commerce Productivity Consultancy</p>
       </header>
   </article><article>
     <a href="/services/" class="link">
       <span class="image">
-        <img src="assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg" alt="Our Services" />
+        <img src="assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg" alt="E-commerce Automation Services" />
       </span>
     </a>
       <header class="major">
-        <h2>Our Services</h2>
+        <h2>E-commerce Automation Services</h2>
         <p>We bring 30 years of expertise and experience gained across a range of industries and sectors.<br> When you work with us, you get access to all our skills and resources to fast-track your business improvement and growth.</p>
       </header>
   </article><article>
@@ -136,9 +136,9 @@
                 <header class="major">
                     <h3>Are you ready?</h3>
                 </header>
-                <p><p>Are you a growing business with 5 to 50 employees? Is your turnover doubling in the next 3 years? Are you experiencing a strain on your resources as you grow?</p>
+                <p><p>Are you running an e-commerce store turning over more than $2 million and aiming for $10 million in sales?</p>
 
-<p>ATOM Digital can help you get ahead of the game by optimizing your business processes and enhancing productivity. We provide solutions that increase sales, reduce costs, and improve overall productivity, allowing you to focus on growth.</p>
+<p>ATOM Digital helps online retailers optimise fulfilment workflows, inventory management and customer communication so your team can focus on growth. Our solutions increase sales, reduce costs and improve overall productivity.</p>
 </p>
                 <ul class="actions">
                     <li><a href="#contact" class="button special">Contact Us</a></li>
@@ -268,7 +268,7 @@
 				
 			</ul>
 
-			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What we do</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About Us</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
+			<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Productivity Transformation Ideas</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/software-consultancy-rate-card/">Productivity Consultancy Rate Card</a></li><li><a href="https://www.atomdigital.com.au/privacy-policy/">Privacy Policy</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="https://www.linkedin.com/company/atom-digital-au/" target="_blank">LinkedIn</a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; ATOM Digital</li>
