--- a/services/business-process-automation.html
+++ b/services/business-process-automation.html
@@ -68,7 +68,7 @@
 			<div class="inner">
 				<a href="/services">Back to Our Services</a>
 				<header class="major">
-					<h1>Business Process Automation for E-commerce</h1>
+					<h1>Business Process Automation</h1>
 				</header>
 					
 				<div class="row">
@@ -98,7 +98,7 @@
 							
 							</ul>					</div>
 					<div class="8u$ 12u$(small)">
-						<h3>Introduction to our Business Process Automation for E-commerce Service</h3>
+						<h3>Introduction to our Business Process Automation Service</h3>
 						<p>Through automation, we can help your business to:</p>
 <ul>
   <li>streamline and simplify processes,</li>
@@ -121,11 +121,11 @@
 
 					</div>
 				</div>
-				<div class="box">If you would like to discuss how Business Process Automation for E-commerce could help your business, 
+				<div class="box">If you would like to discuss how Business Process Automation could help your business, 
 					<a href="#contact-us">contact us</a> for a free, no obligation consultation.
 				</div>
 				<h5>Other Services</h5>
-				<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/services/iso-9001-corrective-action-support">ISO 9001 Corrective Action Support</a></li><li><a href="https://www.atomdigital.com.au/services/workflow-automation">Workflow Automation for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/system-integration">System Integration for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/sales-automation">Sales Automation for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/business-phone-system">Business Phone System</a></li><li><a href="https://www.atomdigital.com.au/services/synchub-data-integration-solutions">SyncHub Data Integration for Franchisors</a></li><li><a href="https://www.atomdigital.com.au/services/zapier-consultant">Zapier Consulting</a></li><li><a href="https://www.atomdigital.com.au/services/process-outsourcing">Process Outsourcing</a></li><li><a href="https://www.atomdigital.com.au/services/teamwork">Teamwork Consulting for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/project-management">Project Management Consulting for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/workshops">Productivity Boost Workshops</a></li></ul>
+				<ul class="footer-links"><li><a href="https://www.atomdigital.com.au/services/workflow-automation">Workflow Automation for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/flexible-admin-support">Flexible Admin Support</a></li><li><a href="https://www.atomdigital.com.au/services/system-integration">System Integration for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/sales-automation">Sales Automation for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/synchub-data-integration-solutions">SyncHub Data Integration for Franchisors</a></li><li><a href="https://www.atomdigital.com.au/services/zapier-consultant">Zapier Consulting</a></li><li><a href="https://www.atomdigital.com.au/services/process-outsourcing">Process Outsourcing</a></li><li><a href="https://www.atomdigital.com.au/services/teamwork">Teamwork Consulting for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/project-management">Project Management Consulting for E-commerce</a></li><li><a href="https://www.atomdigital.com.au/services/workshops">Productivity Boost Workshops</a></li></ul>
 
 			</div>
 		</section>
