--- a/software-consultancy-rate-card/index.html
+++ b/software-consultancy-rate-card/index.html
@@ -129,7 +129,7 @@
         <ul>
           <li>Complex automation with a custom process</li>
           <li>Systems and Data Integration</li>
-          <li>Call Center / UCaaS Configuration</li>
+          <li>Workshop facilitation</li>
           <li>Research and implementation of a new systems</li>
           <li>Training and documentation</li>
         </ul>
