--- a/bulk-add-new-location-products-shopify.html
+++ b/bulk-add-new-location-products-shopify.html
@@ -14,9 +14,9 @@
     We use this as it is a very fast, lightweight and free way to build
     a professional services website.
 -->
-<head><title>Free software resources for business | ATOM Digital | ATOM Digital</title>
+<head><title>Bulk Add New Location to Products in Shopify | ATOM Digital</title>
 	
-	<meta name="description" content="A set of free tools and resources for business owners and managers from ATOM Digital">
+	<meta name="description" content="If you've added a new location in Shopify and none of your products are available there, we can help you enable them in bulk without updating each variant manually.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -46,7 +46,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="/resources/" class="link">Resources</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -67,10 +67,54 @@
 		<section id="one">
 			<div class="inner">
 				<header class="major">
-					<h1>Free Resources</h1>
+					<h1>Bulk Add New Location to Products in Shopify</h1>
 				</header>
-				
-				<section id="one" class="tiles"></section>
+				<span class="image main"><img width="800" src="assets/images/bulk-add-new-location-products-shopify.png"
+						alt="" /></span>
+				<p>Adding a second location in Shopify is a big step for growing businesses - but it often comes with an unexpected headache.</p>
+
+<p>Shopify doesn’t automatically make your existing products sellable at the new location. Every product variant must be updated manually, which becomes painful when you’re dealing with hundreds or thousands of SKUs.</p>
+
+<p>We’ve solved this problem with a simple, scalable solution.</p>
+
+<hr />
+
+<h2 id="update-thousands-of-products-at-once---without-touching-inventory">Update thousands of products at once - without touching inventory</h2>
+
+<p>We’ve built a lightweight script that connects your entire product catalog to a new Shopify location in one pass. It does not change your inventory levels or interfere with stock tracking.</p>
+
+<p>It works safely, handles both tracked and untracked variants, and is restart-safe - making it suitable for large product catalogs and growing stores.</p>
+
+<p>You can host it on your own cloud provider or virtual server, giving you full control over how and when the update runs.</p>
+
+<hr />
+
+<h2 id="key-features">Key features</h2>
+
+<ul>
+  <li>Bulk updates for thousands of product variants</li>
+  <li>Safe rollout with optional test batches</li>
+  <li>Supports tracked and untracked inventory</li>
+  <li>Does not alter inventory quantities</li>
+  <li>Restart-safe for large jobs</li>
+  <li>Can be hosted on your own infrastructure</li>
+</ul>
+
+<hr />
+
+<h2 id="how-we-can-help">How we can help</h2>
+
+<ul>
+  <li>We can run the update for you as a one-time or recurring service</li>
+  <li>Or we can provide the script for your internal team to manage</li>
+  <li>Customisation and support available based on your store setup</li>
+</ul>
+
+<hr />
+
+<p>If your products show as “Not stocked” at your new location, we can fix it fast.</p>
+
+<p>Get in touch to simplify your Shopify setup and unlock multi-location selling.</p>
 
 			</div>
 		</section>
