--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="/resources/" class="link">Resources</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -108,6 +108,16 @@
         <p>About ATOM Digital - E-commerce Productivity Consultancy</p>
       </header>
   </article><article>
+    <a href="/bulk-add-new-location-products-shopify" class="link">
+      <span class="image">
+        <img src="assets/images/bulk-add-new-location-products-shopify.png" alt="Bulk Add New Location to Products in Shopify" />
+      </span>
+    </a>
+      <header class="major">
+        <h2>Bulk Add New Location to Products in Shopify</h2>
+        <p>Make thousands of Shopify products sellable at a new location without manual updates. We can help.</p>
+      </header>
+  </article><article>
     <a href="/services/" class="link">
       <span class="image">
         <img src="assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg" alt="E-commerce Automation Services" />
@@ -126,16 +136,6 @@
       <header class="major">
         <h2>Flexible Admin Support</h2>
         <p>On-demand admin support to keep your business running smoothly.</p>
-      </header>
-  </article><article>
-    <a href="/services/synchub-data-integration-solutions" class="link">
-      <span class="image">
-        <img src="" alt="SyncHub Data Integration for Franchisors" />
-      </span>
-    </a>
-      <header class="major">
-        <h2>SyncHub Data Integration for Franchisors</h2>
-        <p>Streamline your data management with SyncHub integration, designed for Australian franchisors and multi-location businesses.</p>
       </header>
   </article></section>
 
