--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -47,7 +47,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="/resources/" class="link">Resources</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -69,7 +69,7 @@
 					<h1>What We Do for E-commerce Businesses</h1>
 				</header>
 				At ATOM Digital, we help businesses like yours who need expert guidance, advice and hands-on support to solve problems, remove bottlenecks, reduce errors, improve accuracy and save time.
-				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
+				<span class="image main"><img src="assets/images/scott-graham-5fNmWej4tAA-unsplash-864x259.jpg"
 					alt="Business people writing on a notepad in front of two laptop screens" /></span>
 				<span id="scroller"></span>
 				<p>We specialise in helping business solve problems that are getting in the way of productivity and growth.</p>
