--- a/examples-of-productivity-transformation/index.html
+++ b/examples-of-productivity-transformation/index.html
@@ -47,7 +47,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="/resources/" class="link">Resources</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -69,7 +69,7 @@
 					<h1>Productivity Transformation Ideas</h1>
 				</header>
 				There are many ways that ATOM Digital can help your business.
-				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg"
+				<span class="image main"><img src="assets/images/sajad-nori-LWD60a5a15I-unsplash-864x259.jpg"
 					alt="" /></span>
 				<span id="scroller"></span>
 				
