--- a/services/index.html
+++ b/services/index.html
@@ -47,7 +47,7 @@
 </header>
 <!-- Menu -->
 <nav id="menu">
-	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><!--<li><li><a href="/free-resources/" class="Link">Free Resources</a></li>-->
+	<ul class="links"><li><a href="/" class="link">Home</a></li><li><a href="https://www.atomdigital.com.au/what-we-do/">What We Do for E-commerce Businesses</a></li><li><a href="https://www.atomdigital.com.au/examples-of-productivity-transformation/">Examples</a></li><li><a href="https://www.atomdigital.com.au/about/">About ATOM Digital</a></li><li><a href="https://www.atomdigital.com.au/book-a-meeting/">Book a Consultation</a></li><li><a href="/resources/" class="link">Resources</a></li>
 		<!--<li><a href="#" class="button fit">Log In</a></li>-->
 		<li><a href="/services">Services</a></li>
 	</ul>
@@ -69,7 +69,7 @@
 					<h1>E-commerce Automation Services</h1>
 				</header>
 				We bring 30 years of expertise and experience gained across a range of industries and sectors.<br> When you work with us, you get access to all our skills and resources to fast-track your business improvement and growth.
-				<span class="image main"><img src="https://www.atomdigital.com.au/assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg"
+				<span class="image main"><img src="assets/images/riccardo-annandale-7e2pe9wjL9M-unsplash-864-259.jpg"
 					alt="Mobile device showing a chart going upwards" /></span>
 				<span id="scroller"></span>
 				<p>We deliver practical, visible results through a strategic methodology that includes planning, optimising operations, training, upskilling your team, and providing ongoing support.</p>
