--- a/real-cost-of-an-internal-employee-australia-calculator.html
+++ b/real-cost-of-an-internal-employee-australia-calculator.html
@@ -263,7 +263,7 @@
       <p style="font-size: 0.85em; color: #aaa;">Note: Recruitment costs can add an additional 15–25% of first year salary.</p>
 
       <h3 style="margin-top: 20px;">2. Cost to Outsource</h3>
-      <p><strong>Outsourced Date:</strong> $${chargeRate.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</p>
+      <p><strong>Estimated Outsourced Rate:</strong> $${chargeRate.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })} to $${(chargeRate * 1.2).toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</p>
       <p style="font-size: 0.85em; color: #aaa;">
         This rate is comparable to outsourcing a contractor or external provider. Outsourced engagements can:
         <ul style="margin-left: 20px; font-size: 0.85em;">
