Update image paths

--- a/excludeme/index.html
+++ b/excludeme/index.html
@@ -69,7 +69,7 @@
 				<header class="major">
 					<h1>Exclude Me</h1>
 				</header>
-				<span class="image main"><img width="800" src="assets/images/pic11.jpg"
+				<span class="image main"><img width="800" src="/assets/images/pic11.jpg"
 						alt="" /></span>
 				<script>
   document.addEventListener("DOMContentLoaded", function () {
